# obsproc

./: .gitignore  CHANGES  CMakeLists.txt  JURMA_DUMP  README.md  TEST_line  build.sh  fix_satwnd  jcdas_dump.wc1.lsf  jcdas_dump_post.wc1.lsf  jcdas_prep1.wc1.lsf  jcdas_prep1_post.wc1.lsf  jcdas_prep2.wc1.lsf  jcdas_prep2_post.wc1.lsf  jmods.wc1.lsf  jmods.wc2.lsf  jrtma_dump.wc1.lsf  jrtma_dump_post.wc1.lsf  jrtma_prep.wc1.lsf  jrtma_prep_post.wc1.lsf  jurma_dump.wc1.lsf  jurma_dump.wc2.lsf  jurma_dump_post.wc1.lsf  jurma_prep.wc1.lsf  jurma_prep_post.wc1.lsf
build-obsproc/: CMakeLists.txt  build.sh
docs/: README.md  ReleaseNotes.txt  Release_Notes.txt
ecf/: trigger_notes
fix/: CMakeLists.txt  bufrtab.mods  prepobs_anow.bufrtable
jobs/: CMakeLists.txt  JAIRNOW_DUMP  JCDAS_DUMP_POST_wc1  JCDAS_DUMP_wc1  JCDAS_PREP1_POST  JCDAS_PREP1_wc1  JCDAS_PREP2_POST_wc1  JCDAS_PREP2_wc1  JDUMP_ALERT  JDUMP_MONITOR  JGLOBAL_DUMP  JGLOBAL_DUMP.org  JGLOBAL_DUMP_POST  JGLOBAL_DUMP_POST.org  JGLOBAL_PREP  JGLOBAL_PREP_POST  JMODS  JMODS_wc2  JNAM_DUMP  JNAM_DUMP2  JNAM_DUMP_POST  JNAM_PREP  JNAM_PREP_POST  JOBSPROC_AIRNOW_DUMP  JOBSPROC_CDAS_DUMP  JOBSPROC_CDAS_DUMP_POST  JOBSPROC_CDAS_PREP1  JOBSPROC_CDAS_PREP1_POST  JOBSPROC_CDAS_PREP2  JOBSPROC_CDAS_PREP2_POST  JOBSPROC_DUMP_ALERT  JOBSPROC_DUMP_MONITOR  JOBSPROC_GLOBAL_CHEM  JOBSPROC_GLOBAL_DUMP  JOBSPROC_GLOBAL_DUMP_POST  JOBSPROC_GLOBAL_OCEAN  JOBSPROC_GLOBAL_PREP  JOBSPROC_GLOBAL_PREP_POST  JOBSPROC_MODS  JOBSPROC_NAM_DUMP  (+38 more)
modulefiles/: CMakeLists.txt  obsproc.lua.tmpl  obsproc_common.lua  obsproc_gaea.lua  obsproc_hera.lua  obsproc_hercules.lua  obsproc_jet.lua  obsproc_orion.lua  obsproc_wcoss2.lua
parm/: CMakeLists.txt  prepobs_cqcbufr.cdas.parm  prepobs_cqcbufr.gdas.parm  prepobs_cqcbufr.gfs.parm  prepobs_cqcbufr.nam.parm  prepobs_cqcbufr.rap.parm  prepobs_cqcbufr.rrfs.parm  prepobs_cqcbufr.urma.parm  prepobs_prepacqc.cdas.parm  prepobs_prepacqc.gfs.parm  prepobs_prepacqc.nam.parm  prepobs_prepacqc.rrfs.parm  prepobs_prepacqc.test.parm  prepobs_prepacqc.urma.parm  prepobs_prepdata.cdas.parm  prepobs_prepdata.gdas.parm  prepobs_prepdata.gfs.parm  prepobs_prepdata.nam.parm  prepobs_prepdata.rap.parm  prepobs_prepdata.rrfs.parm  prepobs_prepdata.rtma.parm  prepobs_prepdata.urma.parm  prepobs_prepssmi.cdas.parm  prepobs_prepssmi.gdas.parm  prepobs_prepssmi.gfs.parm  prepobs_prepssmi.nam.parm  prepobs_prepssmi.rrfs.parm  prepobs_prepssmi.rtma.parm  prepobs_prepssmi.urma.parm  prepobs_prevents.cdas.parm  prepobs_profcqc.gdas.parm  prepobs_profcqc.gfs.parm  prepobs_profcqc.nam.parm  prepobs_profcqc.rrfs.parm  prepobs_profcqc.rtma.parm  prepobs_profcqc.urma.parm  syndat_syndata.gdas.parm  syndat_syndata.gfs.parm  syndat_syndata.nam.parm  transfer_airnow.list  (+2 more)
release_notes/: CMakeLists.txt  Release_Notes.txt
scripts/: CMakeLists.txt  create_ADT_6h_dumps.sh  create_ICEC_6h_dumps.sh  create_SMAP_6h_dumps.sh  create_SMOS_6h_dumps.sh  create_SST_6h_dumps.sh  exairnow_dump.sh.ecf  excdas_dump.sh  excdas_dump.sh.ecf  excdas_makeprepbufr.sh  excdas_makeprepbufr.sh.ecf  exdump_alert.sh  exdump_alert.sh.ecf  exdump_monitor.sh  exdump_monitor.sh.ecf_ORIG  exdump_monitor.sh.ecf_UNCLEAN  exdump_post.sh  exdump_post.sh.ecf  exglobal_dump.sh  exglobal_dump.sh.ecf  exglobal_dump.sh_old  exglobal_makeprepbufr.sh  exglobal_makeprepbufr.sh_old  exmods.sh  exmods.sh.ecf  exnam_dump.sh  exnam_dump.sh.ecf  exnam_makeprepbufr.sh  exnam_makeprepbufr.sh.ecf  exprep_post.sh  exprep_post.sh.ecf  exrap_dump.sh  exrap_dump.sh.ecf  exrap_makeprepbufr.sh  exrap_makeprepbufr.sh.ecf  exrrfs_dump.sh  exrrfs_makeprepbufr.sh  exrtma_dump.sh  exrtma_dump.sh.ecf  exrtma_dump.sh.ecf.correct  (+10 more)
sorc/: CMakeLists.txt  README.build  README.build.sv  build.sh_avgdata  build.sh_cword  build.sh_dump_post  build.sh_mods  build.sh_prep  build.sh_prep_post  build.sh_remorest  clean.sh  clean.sh.sv  clobber.sh  install.sh  load_libs.rc_avgdata  load_libs.rc_cword  load_libs.rc_dump_post  load_libs.rc_mods  load_libs.rc_prep  load_libs.rc_prep_post  load_libs.rc_remorest
sorc/bufr_avgdata.fd/: CMakeLists.txt  avgdata.f  makefile
sorc/bufr_cword.fd/: cword.f  makefile
sorc/bufr_datacount.fd/: CMakeLists.txt  datacount.f  makefile
sorc/bufr_listdumps.fd/: CMakeLists.txt  iw3unpbf.f  listdumps.f  makefile
sorc/bufr_prepmods.fd/: CMakeLists.txt  bufr_prepmods.f  clonlat.f  makefile  mbuoyb.f  mnemonics.f  obname.f  raddate.f  ssmipn.f  tideg.f
sorc/bufr_remorest.fd/: CMakeLists.txt  makefile  remorest.f
sorc/gdascounts_ave.fd/: CMakeLists.txt  makefile
sorc/global_postevents.fd/: CMakeLists.txt  makefile
sorc/prepobs_cqcbufr.fd/: CMakeLists.txt  makefile
sorc/prepobs_cqcvad.fd/: CMakeLists.txt  makefile
sorc/prepobs_glerladj.fd/: CMakeLists.txt  makefile
sorc/prepobs_listheaders.fd/: CMakeLists.txt  makefile
sorc/prepobs_monoprepbufr.fd/: CMakeLists.txt  makefile
sorc/prepobs_mpcopybufr.fd/: CMakeLists.txt  makefile
sorc/prepobs_oiqcbufr.fd/: CMakeLists.txt  makefile
sorc/prepobs_prepacpf.fd/: CMakeLists.txt  makefile
sorc/prepobs_prepacqc.fd/: CMakeLists.txt  makefile
sorc/prepobs_prepanow.fd/: CMakeLists.txt  makefile  prepanow.f
sorc/prepobs_prepdata.fd/: CMakeLists.txt  makefile
sorc/prepobs_prevents.fd/: CMakeLists.txt  makefile
sorc/prepobs_profcqc.fd/: CMakeLists.txt  makefile
sorc/syndat_syndata.fd/: CMakeLists.txt  makefile
sorc/timetwin.fd/: CMakeLists.txt  makefile
trigger_scripts/: jdump_monitor.wc2.pbs  jnam_dump.wc2.pbs  jnam_dump2.wc2.pbs  jnam_dump_post.wc2.pbs  jnam_prep.wc2.pbs  jnam_prep_post.wc2.pbs  jrap_dump.wc2.pbs  jrap_dump_post.wc2.pbs  jrap_prep.wc2.pbs  jrap_prep_post.wc2.pbs
ush/: CMakeLists.txt  bufr_avgdata.sh  bufr_cword.sh  bufr_datacount.sh  bufr_prepmods.sh  bufr_remorest.sh  build.sh  build_mainpage.sh  dumpmb  gdas_counts.sh  gdas_countstat.sh  gdas_summary.sh  gdascounts_combine.sh  getges.sh  getges_nc.sh  getges_sig.sh  global_postevents.sh  mstr_shp_stn_lst_update.sh  prepobs_makeprepbufr.sh  prepobs_makeprepbufr.sh.ORG  prepobs_oiqcbufr.sh  prepobs_syndata.sh  satellite_summary.sh
(+159 files in other folders)
