list(APPEND jobs_files
  JAIRNOW_DUMP
  JCDAS_DUMP
  JCDAS_DUMP_POST
  JCDAS_PREP1
  JCDAS_PREP1_POST
  JCDAS_PREP2
  JCDAS_PREP2_POST
  JDUMP_ALERT
  JOBSPROC_DUMP_MONITOR
  JGLOBAL_DUMP
  JGLOBAL_DUMP_POST
  JGLOBAL_PREP
  JGLOBAL_PREP_POST
  JOBSPROC_MODS
  JOBSPROC_NAM_DUMP
  JOBSPROC_NAM_DUMP2
  JOBSPROC_NAM_DUMP_POST
  JOBSPROC_NAM_PREP
  JOBSPROC_NAM_PREP_POST
  JOBSPROC_RAP_DUMP
  JOBSPROC_RAP_DUMP_POST
  JOBSPROC_RAP_PREP
  JOBSPROC_RAP_PREP_POST
  JRTMA_DUMP
  JRTMA_DUMP_POST
  JRTMA_PREP
  JRTMA_PREP.correct
  JRTMA_PREP_POST
  JOBSPROC_URMA_DUMP
  JOBSPROC_URMA_DUMP_POST
  JOBSPROC_URMA_PREP
  JOBSPROC_URMA_PREP_POST
  )

install(PROGRAMS ${jobs_files}
        DESTINATION "jobs")
