list(APPEND jobs_files
  JOBSPROC_AIRNOW_DUMP
  JOBSPROC_CDAS_DUMP
  JOBSPROC_CDAS_DUMP_POST
  JOBSPROC_CDAS_PREP1
  JOBSPROC_CDAS_PREP1_POST
  JOBSPROC_CDAS_PREP2
  JOBSPROC_CDAS_PREP2_POST
  JOBSPROC_DUMP_ALERT
  JOBSPROC_DUMP_MONITOR
  JOBSPROC_GLOBAL_DUMP
  JOBSPROC_GLOBAL_DUMP_POST
  JOBSPROC_GLOBAL_PREP
  JOBSPROC_GLOBAL_PREP_POST
  JOBSPROC_MODS
  JOBSPROC_NAM_DUMP
  JOBSPROC_NAM_DUMP2
  JOBSPROC_NAM_DUMP_POST
  JOBSPROC_NAM_PREP
  JOBSPROC_NAM_PREP_POST
  JOBSPROC_RAP_DUMP
  JOBSPROC_RAP_DUMP_POST
  JOBSPROC_RAP_PREP
  JOBSPROC_RAP_PREP_POST
  JOBSPROC_RTMA_DUMP
  JOBSPROC_RTMA_DUMP_POST
  JOBSPROC_RTMA_PREP
  JOBSPROC_RTMA_PREP_POST
  JOBSPROC_URMA_DUMP
  JOBSPROC_URMA_DUMP_POST
  JOBSPROC_URMA_PREP
  JOBSPROC_URMA_PREP_POST
  )

install(PROGRAMS ${jobs_files}
        DESTINATION "jobs")
